<resources>
    <string name="app_name">Hostisme</string>
    <string name="home">Location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="restartung_selection_message">Please select a restaurant.</string>
    <string name="Email">Email</string>
    <string name="Mob">Mob</string>
    <string name="Phone">Phone</string>

    <string name="order_confirmation_message">Thank you, we have received your order.</string>
    <string name="order_missing_message">Order is not yet placed.</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_city">SearchCityActivity</string>
    <string name="title_activity_restaurant_list_acitivity">RestaurantListAcitivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="submit">Submit</string>
    <string name="comments_status">Maximun 400 Character only</string>
    <string name="call_waiter">Call waiter</string>
    <string name="clear_table">Clear table</string>
    <string name="dinner">Dinner</string>
    <string name="starter">Starters</string>


    <string name="address">Address</string>
    <string name="price_summary">Price Summary</string>
    <string name="items">Items     </string>
    <string name="charges">Taxes       </string>
    <string name="estimated_total">Estimated Total   </string>
    <string name="proceed">proceed to Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="item_summary">Item Summary</string>
    <string name="bill_details">Bill Detail</string>
    <string name="discount">Discount</string>
    <string name="order_total">Order Total</string>
    <string name="order_summary">Order Summary</string>
    <string name="servi">Serv. Charge</string>
    <string name="vat">VAT. Tax</string>
    <string name="ser_tax">Serv. Tax</string>
    <string name="payment_method">Payment Method</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">stripe</string>
    <string name="make_payment">Make Payment</string>
    <string name="book_a_table">Book a Table</string>
    <string name="view_pay">View pay</string>
    <string name="booking_history">Booking History</string>
    <string name="current_city">Current city:</string>
    <string name="move_a_table">Move a Table</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="service">Service</string>
    <string name="complaints">Complaint</string>
    <string name="complaints_hint">Maximum 400 character only.</string>
    <string name="inputAddress">Restayrant Name One  \\n 39 Lime St, Sydney NSW 2000,Austraila</string>
    <string name="view_cart">View Cart</string>
    <string name="request_service">Request Service</string>
    <string name="bill_date">Bill Date</string>
    <string name="bill_no">Bill No</string>
    <string name="Order_id">Order ID</string>
    <string name="title_menu">Menus</string>
    <string name="bill_summary">Bill Summary</string>

    <string name="checkout">Check Out</string>
    <string name="offer_banner">"Shop for 2000 to get Rs 100 discount and shop for 3000 to get Rs 200 discount"</string>
    <!--internet connection Values-->
    <string name="internet_connection">"You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="titleMsg">Unable to connect</string>
    <string name="settings">Settings</string>
    <string name="button">Cancel</string>
    <string name="offline_message">Offline data!</string>
    <string name="no_internet_message">No internet connection!</string>
    <string name="go_online">Go Online</string>
    <string name="headercreateaccount">Please Validate</string>
    <string name="togo">To-Go</string>
    <string name="bar">Bar</string>
    <string name="take_away">Take Away</string>
    <string name="error">An Error has Occurred</string>
    <string name="coln"> :</string>
    <string name="select_a_table">Select A Table</string>
    <string name="table_no">Table No.</string>
    <string name="enter_table_no">Enter table no:</string>
    <string name="View_Menu">View Menu</string>
    <string name="payment_msg">Please make Payment before selecting another restaurant.</string>
    <string name="service_request_table_msg">You can\'t place a request for To-Go and Bar.</string>

    <string name="select_the_table">Please Select Table Number.</string>
    <string name="service_type_msg">Please Select Service Type.</string>
    <string name="Date">Date</string>
    <string name="Rest.Name">Rest. Name</string>
    <string name="OrderID">Order ID</string>
    <string name="Description">Description</string>
    <string name="TableNo">Table No</string>
    <string name="Amount">Amount</string>
    <string name="Quantity">Quantity</string>
    <string name="Status">Status</string>Bill Amount

    <string name="Bill_Amount">Bill Amount</string>
    <string name="BillNo">Bill No</string>
    <string name="BookingID">Booking ID</string>
    <string name="Ordertotal">Order total</string>


    <string name="Menu">Menu</string>
    <string name="Restaurant_List">Restaurant List</string>
    <string name="view_pay_bill">View  &amp; Pay Bill</string>

    <string name="View_Order">View Order</string>
    <string name="Sydney">Sydney</string>
    <string name="loading">Loading...</string>
    <string name="Alert">Alert</string>
    <string name="please_select_one_item">Please Select One Item.</string>
    <string name="item_cart">Items in Cart</string>
    <string name="plus_taxes">Plus taxes</string>
    <string name="no_order_items">No Order Details Found.</string>
    <string name="Payment_Confirmation">Payment Confirmation</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="total_before_tax">Total Before Tax</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Allday">Allday</string>
    <string name="Dinner">Dinner</string>
    <string name="heading">Heading</string>
    <string name="No_Items_Found">No Items Found...</string>
    <string name="please_enter_table_no">Please enter the Table no</string>
    <string name="server_error">Server Error.</string>
    <string name="select_payment_type">Please Select Payment Type.</string>
    <string name="promo_not_avialble">Invalid Promo Code.</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="error_encounted">Ërror has Encounterd</string>
    <string name="no_data">No Data</string>
    <string name="item_removed">Item removed</string>
    <string name="Special">Special</string>
    <string name="no_internet_connection_and_try_again">Please check your Internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="warning_restarant_selection">Selecting a new restaurant will remove all the items from the cart.</string>
    <string name="you_have_selected_to_go">You have selected To-Go</string>
    <string name="move_table_confirmation">Do you want to move to the table No.</string>
    <string name="book_a_table_confirmation">Do you want to Book Table No.</string>

</resources>
