<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:gravity="bottom|left"
        android:text="@string/payment_method"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_payment_method"
        android:background="@drawable/payment_background"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/rb_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setStatus"
            android:layout_alignBottom="@+id/setStatus"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/paypal"
            android:buttonTint="@android:color/holo_green_light"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_stripe"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rb_paypal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/rb_paypal"
            android:layout_below="@+id/rb_paypal"
            android:paddingRight="10dp"
            android:text="@string/stripe"
            android:buttonTint="@android:color/holo_green_light"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/make_payment"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</RelativeLayout>