<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="390dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbAR"
        android:padding="5dp">

        <TextView
            android:id="@+id/price_summary"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="5dp"

            android:text="@string/price_summary"
            android:textColor="@color/fontColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_summary"
            android:background="@drawable/payment_background"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/items"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_chargrss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_items"
                android:layout_marginBottom="10dp"
                android:text="@string/charges"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_chargrss"
                android:layout_marginBottom="10dp"
                android:text="@string/estimated_total"
                android:textColor="@color/fontColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_items_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="3dp"
                android:text="$200"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_charger_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_items_price"
                android:layout_marginBottom="10dp"
                android:text="$200"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_estimated_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_charger_price"
                android:text="$200"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_estimated_price"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/proceed"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/item_summary"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/relative_layout"
            android:gravity="bottom"
            android:padding="5dp"
            android:text="@string/item_summary"
            android:textColor="@color/fontColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/item_summery_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/item_summary"
            android:layout_marginBottom="10dp"
            android:background="@drawable/payment_background"
            android:padding="5dp" />
    </RelativeLayout>
</RelativeLayout>