<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.effone.hostismeandroid.activity.Service_RequestActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titel_na"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/titel_na">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/tv_service_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/service"
                android:textColor="@color/fontColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/tv_service_request"
                android:background="@drawable/payment_background"
                android:padding="10dp">


                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_payment_method"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/rb_paypal"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignStart="@+id/rb_paypal"
                        android:layout_below="@+id/rb_paypal"
                        android:buttonTint="@android:color/holo_green_light"
                        android:paddingRight="10dp"
                        android:text="@string/call_waiter"
                        android:textColor="@color/fontColor"
                        android:textSize="18sp"
                        android:layout_weight=".5" />

                    <RadioButton
                        android:id="@+id/rb_clear_table"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/setStatus"
                        android:layout_alignBottom="@+id/setStatus"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:buttonTint="@android:color/holo_green_light"
                        android:text="@string/clear_table"
                        android:textColor="@color/fontColor"
                        android:textSize="18sp"
                        android:layout_weight=".5" />

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/compalint"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:text="@string/complaints"
                android:layout_marginBottom="5dp"
                android:textColor="@color/fontColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_complaints"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/compalint"
                android:background="@drawable/payment_background"
                android:gravity="top|left"
                android:hint="@string/complaints_hint"
                android:inputType="textMultiLine|textNoSuggestions|"
                android:lines="5"
                android:maxHeight="100dp"
                android:privateImeOptions="nm"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:maxLength="355"
                android:maxLines="6"
                android:overScrollMode="always"
                android:padding="5dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:paddingBottom="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />


            <include
                layout="@layout/search_box"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </ScrollView>




</RelativeLayout>
