<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_grey"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_restaurant_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/text_color_grey"
        android:textColorLink="@color/text_color_grey"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_restaurant_email_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="@color/text_color_grey"
            android:textColorLink="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            android:layout_weight=".3"/>

        <TextView
            android:id="@+id/tv_restaurant_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/text_color_grey"
            android:textColorLink="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            android:layout_weight=".7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_restaurant_mob_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Mob"
            android:textColor="@color/text_color_grey"
            android:textColorLink="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            android:layout_weight=".3"/>

        <TextView
            android:id="@+id/tv_restaurant_mob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/text_color_grey"
            android:textColorLink="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            android:layout_weight=".7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_restaurant_land_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            android:textColor="@color/text_color_grey"
            android:textColorLink="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            android:layout_weight=".3"/>

        <TextView
            android:id="@+id/tv_restaurant_land"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/text_color_grey"
            android:textColorLink="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            android:layout_weight=".7"/>
    </LinearLayout>
</LinearLayout>
