<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:layout_margin="5dp"
    android:background="@drawable/payment_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/fontColor"
        android:gravity="bottom"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_small"
        android:text="Restaurant Name One"
        android:id="@+id/tv_address_rest_names"
      />
    <TextView
        android:id="@+id/tv_address_rest_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="5dp"
        android:text="39 Lime St,Sydney NSW 2000,Australia"
        android:textColor="@color/fontColor"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/bill_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/bill_date"
           />

        <TextView
            android:id="@+id/bill_no"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bill_details"
            android:layout_alignStart="@+id/bill_details"
            android:text="@string/bill_no"
            android:layout_below="@+id/bill_details" />

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bill_no"
            android:text="@string/Order_id"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_bill_details"
            android:layout_width="250dp"
            android:gravity="center|start"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bill_details"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text=": 12 Apr 2017 -07:30 PM" />

        <TextView
            android:id="@+id/tv_bill_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/order_id"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text=": 5596"
            android:gravity="center|start"
            android:layout_below="@+id/tv_bill_details"
            android:layout_alignLeft="@+id/tv_bill_details"
            android:layout_alignStart="@+id/tv_bill_details" />

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/order_id"
            android:layout_alignLeft="@+id/tv_bill_no"
            android:layout_alignStart="@+id/tv_bill_no"
            android:layout_below="@+id/tv_bill_no"
            android:text=": SY56002019924"
            android:gravity="center|start"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>